<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/spacing_middle"
    tools:context=".views.fragments.onboarding.OnboardingOneFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/bg_gradient_very_soft"
        android:padding="@dimen/spacing_medium">

        <TextView
            android:id="@+id/titleText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_18"
            android:text="Root yield"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
            android:textSize="@dimen/font_size_22"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/descriptionText2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txt_compute_root_yield"
            android:textSize="18sp"
            app:layout_constraintBottom_toTopOf="@+id/descriptionText3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/titleText" />

        <TextView
            android:id="@+id/descriptionText3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/dimen_48"
            android:text="@string/txt_compute_root_yield_formula"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
            android:textSize="@dimen/font_size_22"
            app:layout_constraintBottom_toTopOf="@+id/descriptionText4"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/descriptionText4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/dimen_62"
            android:text="@string/txt_compute_root_yield_formula_variables"
            android:textColor="@color/indigo_900"
            android:textSize="@dimen/font_size_12"
            app:layout_constraintBottom_toTopOf="@+id/descriptionText"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/descriptionText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txt_compute_root_yield_desc"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>
